--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-16  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkbutton.c (gtk_button_set_image): Add some more
+	docs.  (#307818, Christian Persch)
+
 2005-06-15  Matthias Clasen  <mclasen@redhat.com>
 
 	* gdk/gdkwindow.c (gdk_window_process_updates_internal):
