--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-06-16  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkdnd.c: Update the RGBA cursor if an
+	icon is set after the cursor has been constructed.
+	Also handle repeated setting of icons correctly.
+
+2005-06-16  Matthias Clasen  <mclasen@redhat.com>
+
 	* gtk/gtkbutton.c (gtk_button_set_image): Add some more
 	docs.  (#307818, Christian Persch)
 
