--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-17  Hendrik Brandt  <heb@gnome-de.org>
+
+	* de.po: Updated German translation.
+	
 2005-06-15  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.6.8 ===
