--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Thu Jun 16 15:33:42 2005  Manish Singh  <yosh@gimp.org>
+
+	* gdk/x11/gdkcursor-x11.c (update_cursor): remove unused variable.
+
+	* gdk/x11/gdkwindow-x11.c (_gdk_x11_window_get_cursor): use
+	g_return_val_if_fail.
+
+	* gtk/gtkdnd.c (gtk_drag_get_cursor): initialize hot_x and hot_y
+	for all cases.
+
+	* gtk/gtkfilechooserdefault.c (button_new): gtk_button_set_image
+	takes a GtkWidget, not a GtkImage.
+
 2005-06-16  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkfilechooserdefault.c (button_new): Simplify
