Updated Canadian English translation.
2005-06-17  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-17  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2005-06-13  Terance Sola  <terance@yse.net>
 
 	* nb.po: Updated Norwegian Bokmål translation.
