--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-06-17  Kristian Rietveld  <kris@gtk.org>
+
+	Fixes #307914 (Alexander Larsson), fixing some breakage caused
+	by my previous commit.
+
+	* gtk/gtktreeview.c (validate_visible_area): force dy to be zero
+	when it fits on a single page,
+	(scroll_sync_handler): same here.
+
 Thu Jun 16 15:33:42 2005  Manish Singh  <yosh@gimp.org>
 
 	* gdk/x11/gdkcursor-x11.c (update_cursor): remove unused variable.
