--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-17  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
+
+	* zh_TW.po: Updated Traditional Chinese translation.
+
 2005-06-17  Hendrik Brandt  <heb@gnome-de.org>
 
 	* de.po: Updated German translation.
