--- a/po-properties/zh_TW.po
+++ b/po-properties/zh_TW.po
@@ -3,18 +3,19 @@
 # Chih-Wei Huang <cwhuang@linux.org.tw>, 2000.
 # Abel Cheung <maddog@linuxhall.org>, 2001-03.
 # 辛立仁 <hsin@med.cgu.edu.tw>, 2000, 2004
-#
+# 
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: gtk+ 2.6.4\n"
+"Project-Id-Version: gtk+-properties 2.6.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-06-15 23:46-0400\n"
-"PO-Revision-Date: 2005-04-07 22:12+0800\n"
-"Last-Translator: Li-Jen Hsin <hsin@med.cgu.edu.tw>\n"
-"Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
+"POT-Creation-Date: 2005-06-15 20:18+0800\n"
+"PO-Revision-Date: 2005-06-17 20:04+0800\n"
+"Last-Translator: Chao-Hsiung Liao <j_h_liau@yahoo.com.tw>\n"
+"Language-Team: Chinese/Traditional <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8-bit\n"
+"Content-Transfer-Encoding: 8bit"
 
 #: gdk-pixbuf/gdk-pixbuf.c:108
 msgid "Number of Channels"
@@ -95,7 +96,7 @@ msgstr "螢幕"
 
 #: gdk/gdkpango.c:575
 msgid "the GdkScreen for the renderer"
-msgstr ""
+msgstr "GdkScreen 於此輸出區(renderer)"
 
 #: gtk/gtkaboutdialog.c:204
 msgid "Program name"
@@ -167,7 +168,7 @@ msgstr "為程式撰寫文件的編寫員的清單"
 
 #: gtk/gtkaboutdialog.c:354
 msgid "Artists"
-msgstr ""
+msgstr "美工人員"
 
 #: gtk/gtkaboutdialog.c:355
 msgid "List of people who have contributed artwork to the program"
@@ -180,7 +181,7 @@ msgstr "翻譯者"
 #: gtk/gtkaboutdialog.c:373
 msgid ""
 "Credits to the translators. This string should be marked as translatable"
-msgstr ""
+msgstr "翻譯者的相關訊息。此訊息應該標記為可翻譯"
 
 #: gtk/gtkaboutdialog.c:388
 msgid "Logo"
@@ -200,7 +201,7 @@ msgstr "標誌圖示名稱"
 
 #: gtk/gtkaboutdialog.c:405
 msgid "A named icon to use as the logo for the about box."
-msgstr ""
+msgstr "用在「關於」方塊標誌的具名圖示。"
 
 #: gtk/gtkaboutdialog.c:412
 msgid "Link Color"
@@ -278,16 +279,14 @@ msgid ""
 msgstr "當工具列呈水平顯示時工具列項目是否可見。"
 
 #: gtk/gtkaction.c:250
-#, fuzzy
 msgid "Visible when overflown"
-msgstr "垂直顯示時為可見"
+msgstr "overflown 時為可見"
 
 #: gtk/gtkaction.c:251
-#, fuzzy
 msgid ""
 "When TRUE, toolitem proxies for this action are represented in the toolbar "
 "overflow menu."
-msgstr "當為 TRUE 時，代理此指令的空選單會被隱藏。"
+msgstr "當為 TRUE 時，此指令的工具選項代理會被顯示在工具列 overflown 選單。"
 
 #: gtk/gtkaction.c:258 gtk/gtktoolitem.c:166
 msgid "Visible when vertical"
@@ -707,9 +706,8 @@ msgid "Image widget"
 msgstr "影像元件"
 
 #: gtk/gtkbutton.c:307
-#, fuzzy
 msgid "Child widget to appear next to the button text"
-msgstr "選單文字旁邊顯示的子元件"
+msgstr "按鈕文字旁邊顯示的子元件"
 
 #: gtk/gtkbutton.c:373
 msgid "Default Spacing"
@@ -748,15 +746,14 @@ msgid ""
 msgstr "當按鈕按下時期子元件應偏移多遠的垂直距離"
 
 #: gtk/gtkbutton.c:411
-#, fuzzy
 msgid "Displace focus"
-msgstr "作為焦點"
+msgstr "解除焦點"
 
 #: gtk/gtkbutton.c:412
 msgid ""
 "Whether the child_displacement_x/_y properties should also affect the focus "
 "rectangle"
-msgstr ""
+msgstr "child_displacement_x/_y 屬性是否也影響焦點方塊"
 
 #: gtk/gtkbutton.c:417
 msgid "Show button images"
@@ -834,16 +831,15 @@ msgstr "CellRenderer 的編輯模式"
 
 #: gtk/gtkcellrenderer.c:215
 msgid "visible"
-msgstr "可見"
+msgstr "可視的"
 
 #: gtk/gtkcellrenderer.c:216
 msgid "Display the cell"
 msgstr "會顯示該格位"
 
 #: gtk/gtkcellrenderer.c:223
-#, fuzzy
 msgid "Display the cell sensitive"
-msgstr "會顯示該格位"
+msgstr "會顯示該格位敏感度"
 
 #: gtk/gtkcellrenderer.c:230
 msgid "xalign"
@@ -934,14 +930,12 @@ msgid "Whether this tag affects the cell background color"
 msgstr "本標記可以變動該格位的背景顏色"
 
 #: gtk/gtkcellrenderercombo.c:88
-#, fuzzy
 msgid "Model"
-msgstr "模式"
+msgstr "模型"
 
 #: gtk/gtkcellrenderercombo.c:89
-#, fuzzy
 msgid "The model containing the possible values for the combo box"
-msgstr "該組合方塊的模型"
+msgstr "該組合方塊的模型(包含可能的數值)"
 
 #: gtk/gtkcellrenderercombo.c:109 gtk/gtkcomboboxentry.c:121
 msgid "Text Column"
@@ -953,11 +947,11 @@ msgstr "從資料來源模型取得字串資料的欄位"
 
 #: gtk/gtkcellrenderercombo.c:127
 msgid "Has Entry"
-msgstr ""
+msgstr "具有欄位"
 
 #: gtk/gtkcellrenderercombo.c:128
 msgid "If FALSE, don't allow to enter strings other than the chosen ones"
-msgstr ""
+msgstr "如果為 FALSE，將不允許輸入選定字串以外的字"
 
 #: gtk/gtkcellrendererpixbuf.c:136
 msgid "Pixbuf Object"
@@ -1083,7 +1077,7 @@ msgstr "以 GdkColor 方式表達的前景顏色"
 #: gtk/gtkcellrenderertext.c:279 gtk/gtkentry.c:505 gtk/gtktexttag.c:275
 #: gtk/gtktextview.c:578
 msgid "Editable"
-msgstr "可編輯"
+msgstr "可編輯的"
 
 #: gtk/gtkcellrenderertext.c:280 gtk/gtktexttag.c:276 gtk/gtktextview.c:579
 msgid "Whether the text can be modified by the user"
@@ -1191,18 +1185,18 @@ msgstr ""
 
 #: gtk/gtkcellrenderertext.c:416 gtk/gtklabel.c:433 gtk/gtkprogressbar.c:242
 msgid "Ellipsize"
-msgstr ""
+msgstr "升高文字"
 
 #: gtk/gtkcellrenderertext.c:417
 msgid ""
 "The preferred place to ellipsize the string, if the cell renderer does not "
 "have enough room to display the entire string, if at all"
-msgstr ""
+msgstr "如果格位顯示區沒有足夠的空間顯示整個字串時，用來升高該字串的空間"
 
 #: gtk/gtkcellrenderertext.c:434 gtk/gtkfilechooserbutton.c:366
 #: gtk/gtklabel.c:453
 msgid "Width In Characters"
-msgstr ""
+msgstr "按鈕寬度"
 
 #: gtk/gtkcellrenderertext.c:435 gtk/gtklabel.c:454
 msgid "The desired width of the label, in characters"
@@ -1321,14 +1315,12 @@ msgid "Whether this tag affects the language the text is rendered as"
 msgstr "本標記可否影響文字要被描繪依據的語言設定"
 
 #: gtk/gtkcellrenderertext.c:503
-#, fuzzy
 msgid "Ellipsize set"
 msgstr "提高文字設定"
 
 #: gtk/gtkcellrenderertext.c:504
-#, fuzzy
 msgid "Whether this tag affects the ellipsize mode"
-msgstr "本標記可否影響文字升高的情況"
+msgstr "本標記可否影響文字升高的模式"
 
 #: gtk/gtkcellrenderertoggle.c:142
 msgid "Toggle state"
@@ -1552,30 +1544,26 @@ msgid "Add tearoffs to menus"
 msgstr "在選單上加上可卸下標記"
 
 #: gtk/gtkcombobox.c:659
-#, fuzzy
 msgid "Whether dropdowns should have a tearoff menu item"
-msgstr "標籤的尺寸應否統一"
+msgstr "下拉選單是否應有分離選單項目"
 
 #: gtk/gtkcombobox.c:674 gtk/gtkentry.c:530
 msgid "Has Frame"
 msgstr "有框架"
 
 #: gtk/gtkcombobox.c:675
-#, fuzzy
 msgid "Whether the combo box draws a frame around the child"
-msgstr "是否該欄位可以在標頭下重新排序"
+msgstr "組合方塊是否在子元件周圍繪出框架"
 
 #: gtk/gtkcombobox.c:683
-#, fuzzy
 msgid "Whether the combo box grabs focus when it is clicked with the mouse"
-msgstr "當該按鈕被滑鼠點選時是否自動取得焦點"
+msgstr "當該組合方塊被滑鼠點選時是否自動取得焦點"
 
 #: gtk/gtkcombobox.c:689
 msgid "Appears as list"
 msgstr "依列表顯示"
 
 #: gtk/gtkcombobox.c:690
-#, fuzzy
 msgid "Whether dropdowns should look like lists rather than menus"
 msgstr "組合方塊下拉選單是否應該顯示作列表樣而非選單樣"
 
@@ -1791,30 +1779,28 @@ msgid "Minimum length of the search key in order to look up matches"
 msgstr "用來搜尋的關鍵字的最小長度"
 
 #: gtk/gtkentrycompletion.c:295 gtk/gtkiconview.c:368
-#, fuzzy
 msgid "Text column"
-msgstr "文字格位"
+msgstr "文字欄位"
 
 #: gtk/gtkentrycompletion.c:296
-#, fuzzy
 msgid "The column of the model containing the strings."
-msgstr "從資料來源模型取得字串資料的欄位"
+msgstr "包含字串的模型欄位"
 
 #: gtk/gtkentrycompletion.c:315
 msgid "Inline completion"
-msgstr ""
+msgstr "行內自動補齊"
 
 #: gtk/gtkentrycompletion.c:316
 msgid "Whether the common prefix should be inserted automatically"
-msgstr ""
+msgstr "是否自動插入共通的前綴字"
 
 #: gtk/gtkentrycompletion.c:330
 msgid "Popup completion"
-msgstr ""
+msgstr "彈出項目自動補齊"
 
 #: gtk/gtkentrycompletion.c:331
 msgid "Whether the completions should be shown in a popup window"
-msgstr ""
+msgstr "是否在彈出式視窗中顯示補齊項目"
 
 #: gtk/gtkeventbox.c:121
 msgid "Visible Window"
@@ -1975,7 +1961,7 @@ msgstr "檔案選擇對話框的標題。"
 
 #: gtk/gtkfilechooserbutton.c:367
 msgid "The desired width of the button widget, in characters."
-msgstr ""
+msgstr "按鈕元件所需的寬度，以字元計。"
 
 #: gtk/gtkfilechooserdefault.c:623
 msgid "Default file chooser backend"
@@ -2168,80 +2154,75 @@ msgstr "選擇模式"
 
 #: gtk/gtkiconview.c:350
 msgid "Pixbuf column"
-msgstr ""
+msgstr "Pixbuf 欄"
 
 #: gtk/gtkiconview.c:351
 msgid "Model column used to retrieve the icon pixbuf from"
-msgstr ""
+msgstr "用來取得圖示 pixbuf 的典型欄"
 
 #: gtk/gtkiconview.c:369
 msgid "Model column used to retrieve the text from"
-msgstr ""
+msgstr "用來取得文字 pixbuf 的典型欄"
 
 #: gtk/gtkiconview.c:388
-#, fuzzy
 msgid "Markup column"
-msgstr "標記"
+msgstr "標記欄位"
 
 #: gtk/gtkiconview.c:389
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr ""
+msgstr "如果使用 Pango 標記時用來取得文字的典型欄"
 
 #: gtk/gtkiconview.c:396
-#, fuzzy
 msgid "Icon View Model"
-msgstr "TreeView 模型"
+msgstr "Icon View 模型"
 
 #: gtk/gtkiconview.c:397
-#, fuzzy
 msgid "The model for the icon view"
-msgstr "樹狀顯示所使用的模型"
+msgstr "圖示檢視所使用的模型"
 
 #: gtk/gtkiconview.c:413
-#, fuzzy
 msgid "Number of columns"
-msgstr "頻道數目"
+msgstr "欄位數目"
 
 #: gtk/gtkiconview.c:414
 msgid "Number of columns to display"
-msgstr ""
+msgstr "要顯示的欄數"
 
 #: gtk/gtkiconview.c:431
 msgid "Width for each item"
-msgstr ""
+msgstr "各項目的寬度"
 
 #: gtk/gtkiconview.c:432
 msgid "The width used for each item"
-msgstr ""
+msgstr "用於各個項目的寬度"
 
 #: gtk/gtkiconview.c:448
 msgid "Space which is inserted between cells of an item"
-msgstr ""
+msgstr "用來插入項目的格位之間的空間"
 
 #: gtk/gtkiconview.c:463
 msgid "Row Spacing"
-msgstr ""
+msgstr "行的間隔"
 
 #: gtk/gtkiconview.c:464
 msgid "Space which is inserted between grid rows"
-msgstr ""
+msgstr "用來插入格線行之間的空間"
 
 #: gtk/gtkiconview.c:479
 msgid "Column Spacing"
-msgstr ""
+msgstr "欄的間隔"
 
 #: gtk/gtkiconview.c:480
 msgid "Space which is inserted between grid column"
-msgstr ""
+msgstr "用來插入格線欄之間的空間"
 
 #: gtk/gtkiconview.c:495
-#, fuzzy
 msgid "Margin"
-msgstr "左邊邊界"
+msgstr "邊界"
 
 #: gtk/gtkiconview.c:496
 msgid "Space which is inserted at the edges of the icon view"
-msgstr ""
+msgstr "用來插入圖示檢視邊緣的空間"
 
 #: gtk/gtkiconview.c:512 gtk/gtkprogressbar.c:152 gtk/gtktoolbar.c:507
 msgid "Orientation"
@@ -2250,27 +2231,23 @@ msgstr "方向"
 #: gtk/gtkiconview.c:513
 msgid ""
 "How the text and icon of each item are positioned relative to each other"
-msgstr ""
+msgstr "每個項目的文字與圖示之間要如何排列"
 
 #: gtk/gtkiconview.c:521
-#, fuzzy
 msgid "Selection Box Color"
-msgstr "選取邊界"
+msgstr "選取區方塊色彩"
 
 #: gtk/gtkiconview.c:522
-#, fuzzy
 msgid "Color of the selection box"
-msgstr "字型選擇對話框的標題"
+msgstr "選取區方塊的色彩"
 
 #: gtk/gtkiconview.c:528
-#, fuzzy
 msgid "Selection Box Alpha"
-msgstr "選取邊界"
+msgstr "選取區方塊的α混色"
 
 #: gtk/gtkiconview.c:529
-#, fuzzy
 msgid "Opacity of the selection box"
-msgstr "字型選擇對話框的標題"
+msgstr "選取區方塊的透明度"
 
 #: gtk/gtkimage.c:158
 msgid "Pixbuf"
@@ -2325,19 +2302,16 @@ msgid "Icon size"
 msgstr "圖示大小"
 
 #: gtk/gtkimage.c:216
-#, fuzzy
 msgid "Symbolic size to use for stock icon, icon set or named icon"
-msgstr "內建圖示或圖示集的尺寸大小"
+msgstr "內建圖示或圖示集或具名圖示的符號大小"
 
 #: gtk/gtkimage.c:232
-#, fuzzy
 msgid "Pixel size"
-msgstr "像素"
+msgstr "像素大小"
 
 #: gtk/gtkimage.c:233
-#, fuzzy
 msgid "Pixel size to use for named icon"
-msgstr "內建圖示或圖示集的尺寸大小"
+msgstr "具名圖示的像素大小"
 
 #: gtk/gtkimage.c:241
 msgid "Animation"
@@ -2348,14 +2322,12 @@ msgid "GdkPixbufAnimation to display"
 msgstr "準備顯示的 GdkPixbufAnimation"
 
 #: gtk/gtkimage.c:257 gtk/gtkwindow.c:529
-#, fuzzy
 msgid "Icon Name"
-msgstr "字型名稱"
+msgstr "圖示名稱"
 
 #: gtk/gtkimage.c:258
-#, fuzzy
 msgid "The name of the icon from the icon theme"
-msgstr "選擇字型的名稱"
+msgstr "圖示主題的圖示名稱"
 
 #: gtk/gtkimage.c:265
 msgid "Storage type"
@@ -2448,7 +2420,7 @@ msgstr "當文字標籤速記鍵按下時所啟動的元件"
 msgid ""
 "The preferred place to ellipsize the string, if the label does not have "
 "enough room to display the entire string, if at all"
-msgstr ""
+msgstr "如果標籤沒有足夠的空間顯示整個字串時，用來升高該字串的空間"
 
 #: gtk/gtklabel.c:474
 msgid "Single Line Mode"
@@ -2460,20 +2432,19 @@ msgstr "標籤是否以單行的方式顯示"
 
 #: gtk/gtklabel.c:492
 msgid "Angle"
-msgstr "角度"
+msgstr "角"
 
 #: gtk/gtklabel.c:493
 msgid "Angle at which the label is rotated"
 msgstr "顯示標籤時旋轉的角度"
 
 #: gtk/gtklabel.c:513
-#, fuzzy
 msgid "Maximum Width In Characters"
-msgstr "最大寬度"
+msgstr "最大寬度(以字元計)"
 
 #: gtk/gtklabel.c:514
 msgid "The desired maximum width of the label, in characters"
-msgstr ""
+msgstr "標籤所需的最大寬度，以字元計"
 
 #: gtk/gtklayout.c:635 gtk/gtkviewport.c:136
 msgid "Horizontal adjustment"
@@ -2510,14 +2481,12 @@ msgid ""
 msgstr "當此選單卸下之後視窗管理員指定的視窗標題"
 
 #: gtk/gtkmenu.c:543
-#, fuzzy
 msgid "Tearoff State"
-msgstr "卸下標題"
+msgstr "分離狀態"
 
 #: gtk/gtkmenu.c:544
-#, fuzzy
 msgid "A boolean that indicates whether the menu is torn-off"
-msgstr "當此選單卸下之後視窗管理員指定的視窗標題"
+msgstr "指出該選單是否分離的布林值"
 
 #: gtk/gtkmenu.c:550
 msgid "Vertical Padding"
@@ -2777,36 +2746,32 @@ msgid "Tab label"
 msgstr "標籤文字"
 
 #: gtk/gtknotebook.c:485
-#, fuzzy
 msgid "The string displayed on the child's tab label"
-msgstr "子標籤所顯示的文字"
+msgstr "子分頁標籤所顯示的文字"
 
 #: gtk/gtknotebook.c:491
 msgid "Menu label"
 msgstr "選單文字標籤"
 
 #: gtk/gtknotebook.c:492
-#, fuzzy
 msgid "The string displayed in the child's menu entry"
-msgstr "子選單輸入顯示的字串"
+msgstr "子選單項目顯示的字串"
 
 #: gtk/gtknotebook.c:505
 msgid "Tab expand"
 msgstr "擴展標籤"
 
 #: gtk/gtknotebook.c:506
-#, fuzzy
 msgid "Whether to expand the child's tab or not"
-msgstr "是否擴展子標籤"
+msgstr "是否擴展子分頁"
 
 #: gtk/gtknotebook.c:512
 msgid "Tab fill"
 msgstr "標籤填滿"
 
 #: gtk/gtknotebook.c:513
-#, fuzzy
 msgid "Whether the child's tab should fill the allocated area or not"
-msgstr "是否子標籤應填滿配置的區域"
+msgstr "子分頁是否應填滿配置的區域"
 
 #: gtk/gtknotebook.c:519
 msgid "Tab pack type"
@@ -2897,7 +2862,7 @@ msgstr "『位置』屬性的最大可能值"
 
 #: gtk/gtkpaned.c:309
 msgid "Resize"
-msgstr "調整尺寸"
+msgstr "重設大小"
 
 #: gtk/gtkpaned.c:310
 msgid "If TRUE, the child expands and shrinks along with the paned widget"
@@ -2975,15 +2940,15 @@ msgstr "列模式"
 
 #: gtk/gtkprogressbar.c:162
 msgid "Specifies the visual style of the bar in percentage mode (Deprecated)"
-msgstr ""
+msgstr "以百分比模式指定工具列的外觀(已廢棄)"
 
 #: gtk/gtkprogressbar.c:170
 msgid "Activity Step"
-msgstr ""
+msgstr "活動步驟"
 
 #: gtk/gtkprogressbar.c:171
 msgid "The increment used for each iteration in activity mode (Deprecated)"
-msgstr ""
+msgstr "在活動模式中每次迭代所使用的增加值(已廢棄)"
 
 #: gtk/gtkprogressbar.c:180
 msgid "Activity Blocks"
@@ -2993,7 +2958,7 @@ msgstr "活動區塊"
 msgid ""
 "The number of blocks which can fit in the progress bar area in activity mode "
 "(Deprecated)"
-msgstr ""
+msgstr "在活動模式中用於進度列區域的區塊數(已廢棄)"
 
 #: gtk/gtkprogressbar.c:190
 msgid "Discrete Blocks"
@@ -3029,7 +2994,7 @@ msgstr "進度列中所顯示的文字"
 msgid ""
 "The preferred place to ellipsize the string, if the progressbar does not "
 "have enough room to display the entire string, if at all"
-msgstr ""
+msgstr "如果進度列沒有足夠的空間顯示整個字串時，用來升高該字串的空間"
 
 #: gtk/gtkradioaction.c:139
 msgid "The value"
@@ -3047,14 +3012,12 @@ msgid "Group"
 msgstr "群組"
 
 #: gtk/gtkradioaction.c:157
-#, fuzzy
 msgid "The radio action whose group this action belongs to."
 msgstr "此指令所屬的單選指令群組。"
 
 #: gtk/gtkradiobutton.c:114
-#, fuzzy
 msgid "The radio button whose group this widget belongs to."
-msgstr "此元件所屬的單選按鈕群組"
+msgstr "此元件所屬的單選按鈕群組。"
 
 #: gtk/gtkrange.c:325
 msgid "Update policy"
@@ -3086,7 +3049,7 @@ msgstr "捲動列或等比縮放指標的寬度"
 
 #: gtk/gtkrange.c:357
 msgid "Trough Border"
-msgstr "經由邊緣"
+msgstr "溝槽邊緣"
 
 #: gtk/gtkrange.c:358
 msgid "Spacing between thumb/steppers and outer trough bevel"
@@ -3192,7 +3155,7 @@ msgstr "數值距離"
 
 #: gtk/gtkscale.c:208
 msgid "Space between value text and the slider/trough area"
-msgstr ""
+msgstr "數值文字與滑動鈕/溝槽區域間的間隔"
 
 #: gtk/gtkscrollbar.c:82
 msgid "Minimum Slider Length"
@@ -3341,11 +3304,11 @@ msgstr "使用的圖示佈景名稱"
 
 #: gtk/gtksettings.c:327
 msgid "Key Theme Name"
-msgstr ""
+msgstr "主題名稱"
 
 #: gtk/gtksettings.c:328
 msgid "Name of key theme RC file to load"
-msgstr ""
+msgstr "要載入的主題 RC 檔案名稱"
 
 #: gtk/gtksettings.c:336
 msgid "Menu bar accelerator"
@@ -3397,7 +3360,7 @@ msgstr "是否以平滑化方式顯示 Xft 字型; 0=否, 1=是, -1=預設值"
 
 #: gtk/gtksettings.c:392
 msgid "Xft Hinting"
-msgstr ""
+msgstr "Xft Hinting"
 
 #: gtk/gtksettings.c:393
 msgid "Whether to hint Xft fonts; 0=no, 1=yes, -1=default"
@@ -3429,7 +3392,7 @@ msgstr "Xft 的解析度, 單位為 1024 * 點數/英吋。-1為使用預設值"
 
 #: gtk/gtksettings.c:432
 msgid "Alternative button order"
-msgstr ""
+msgstr "替換按鈕順序"
 
 #: gtk/gtksettings.c:433
 msgid "Whether buttons in dialogs should use the alternative button order"
@@ -3634,7 +3597,7 @@ msgstr "在元件的邊緣會否自動換行"
 
 #: gtk/gtktext.c:629
 msgid "Word Wrap"
-msgstr "按字換行"
+msgstr "自動換行"
 
 #: gtk/gtktext.c:630
 msgid "Whether words are wrapped at widget edges"
@@ -3772,11 +3735,10 @@ msgid "Amount to indent the paragraph, in pixels"
 msgstr "段落縮排的程度，以像素數目表示"
 
 #: gtk/gtktexttag.c:426
-#, fuzzy
 msgid ""
 "Offset of text above the baseline (below the baseline if rise is negative) "
 "in Pango units"
-msgstr "文字在基準線以上的距離 (負數表示文字在基準線以下)，以像素數目表示"
+msgstr "文字在基準線以上的距離 (負數表示文字在基準線以下)，以 Pango 單位表示"
 
 #: gtk/gtktexttag.c:435
 msgid "Pixels above lines"
@@ -3813,7 +3775,7 @@ msgstr "選擇永遠不換行、字詞邊界換行或是字元邊界換行"
 
 #: gtk/gtktexttag.c:492 gtk/gtktextview.c:634
 msgid "Tabs"
-msgstr ""
+msgstr "分頁"
 
 #: gtk/gtktexttag.c:493 gtk/gtktextview.c:635
 msgid "Custom tabs for this text"
@@ -4218,20 +4180,20 @@ msgstr "設定每一行為等高以加速GtkTreeView"
 
 #: gtk/gtktreeview.c:675
 msgid "Hover Selection"
-msgstr ""
+msgstr "隨游標選取"
 
 #: gtk/gtktreeview.c:676
 msgid "Whether the selection should follow the pointer"
-msgstr ""
+msgstr "是否隨游標改變選取範圍"
 
 #: gtk/gtktreeview.c:695
 msgid "Hover Expand"
-msgstr ""
+msgstr "隨游標展開"
 
 #: gtk/gtktreeview.c:696
 msgid ""
 "Whether rows should be expanded/collapsed when the pointer moves over them"
-msgstr ""
+msgstr "當游標移到該行時是否展開/摺疊它"
 
 #: gtk/gtktreeview.c:716
 msgid "Vertical Separator Width"
@@ -4299,7 +4261,7 @@ msgstr "目前的欄寬"
 
 #: gtk/gtktreeviewcolumn.c:251
 msgid "Space which is inserted between cells"
-msgstr ""
+msgstr "插入格位之間的間隔"
 
 #: gtk/gtktreeviewcolumn.c:259
 msgid "Sizing"
@@ -4714,9 +4676,8 @@ msgid "Icon for this window"
 msgstr "本視窗所用的圖示"
 
 #: gtk/gtkwindow.c:530
-#, fuzzy
 msgid "Name of the themed icon for this window"
-msgstr "本視窗所用的圖示"
+msgstr "本視窗所用的主題圖示名稱"
 
 #: gtk/gtkwindow.c:545
 msgid "Is Active"
@@ -4769,12 +4730,10 @@ msgid "TRUE if the window should receive the input focus."
 msgstr "如果視窗應該接受輸入聚焦則設定為 TRUE。"
 
 #: gtk/gtkwindow.c:608
-#, fuzzy
 msgid "Focus on map"
 msgstr "點選時聚焦"
 
 #: gtk/gtkwindow.c:609
-#, fuzzy
 msgid "TRUE if the window should receive the input focus when mapped."
 msgstr "如果視窗應該接受輸入聚焦則設定為 TRUE。"
 
