--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-06-17  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkbutton.c (gtk_button_class_init): Document
+	several button signals as not useful.
+
 	* gtk/gtkentrycompletion.c (gtk_entry_completion_complete): 
 	Resize the popup if necessary.  (#308076, Vincent Noel)
 
