--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-06-17  Matthias Clasen  <mclasen@redhat.com>
 
+	* gdk/gdkcursor.h: Define GDK_IS_CURSOR() and GDK_CURSOR().
+
 	* gdk/x11/gdkcursor-x11.c: 
 	* gdk/gdkcursor.c: Improve some return_if_fail checks,
 	and add the missing non-Xcursor fallback for 
