--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-18  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkcalendar.c (gtk_calendar_init): _NL_FIRST_WEEKDAY is
+	1-based.  (#163842, Pierre Ossman)
+
 2005-06-17  Kristian Rietveld  <kris@gtk.org>
 
 	Fix #160281, testcase from Peter Bloomfield.
