Allow to construct menu tool buttons.
2005-06-18  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkuimanager.c: Allow to construct menu tool buttons.

	* demos/gtk-demo/appwindow.c: Demonstrate menu tool buttons
	constructed with GtkUIManager.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-06-18  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkuimanager.c: Allow to construct menu tool buttons.
+
+	* demos/gtk-demo/appwindow.c: Demonstrate menu tool buttons
+	constructed with GtkUIManager.
+
 	* gtk/gtk.symbols: 
 	* gtk/gtkimage.h: 
 	* gtk/gtkimage.c (gtk_image_clear): Make this function
