--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,5 +1,8 @@
 2005-06-18  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/tmpl/gtkuimanager.sgml: Document that 
+	toolitem elements may have menu subelements.
+
 	* gtk/gtk-sections.txt: Updates
 
 2005-06-17  Matthias Clasen  <mclasen@redhat.com>
