--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-06-19  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk.symbols:
+	* gtk/gtksizegroup.[hc]: Add an ignore-hidden property
+	with getter and setter.  (#171612, Christian Neumair)
+
 2005-06-18  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkuimanager.c (gtk_ui_manager_add_ui): Make this 
