--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-19  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk-sections.txt: Updates.
+
 2005-06-18  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/tmpl/gtkuimanager.sgml: Document that 
