--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-06-19  Kristian Rietveld  <kris@gtk.org>
 
+	* gtk/gtktreeview.c (validate_visible_area): only keep the
+	row at the same position if the full row is visible. (#304623,
+	Jorn Baayen).
+
+2005-06-19  Kristian Rietveld  <kris@gtk.org>
+
 	* gtk/gtktreeview.c (gtk_tree_view_size_allocate): set dy to zero
 	if treeview's height is smaller than the current page_size (just
 	like we do elsewhere).
