--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-19  Matthias Clasen  <mclasen@redhat.com>
+
+	* NEWS: Updates
+
 2005-06-19  Kristian Rietveld  <kris@gtk.org>
 
 	* gtk/gtktreeview.c (gtk_tree_view_clamp_node_visible): added a
