--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-06-20  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk.symbols:
+	* gtk/gtkwindow.h:
+	* gtk/gtkwindow.c (gtk_window_present_with_time): Variant of
+	gtk_window_present which takes a timestamp.  (#166379, Elijah Newren)
+
 2005-06-19  Matthias Clasen  <mclasen@redhat.com>
 	
 	* gtk/gtk.symbols: Add a forgotten symbol
