--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-20  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk-sections.txt: Add gtk_window_present_with_time
+
 2005-06-19  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/Makefile.am: Ignore some more headers.
