Handle missing MAP_FAILED. (#308449, Georg Schwarz)
2005-06-20  Matthias Clasen  <mclasen@redhat.com>

	* xdgmimecache.c: Handle missing MAP_FAILED.  (#308449, Georg
	Schwarz)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-06-20  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkiconcache.c: Handle MAP_FAILED.  (#308449, Georg
+	Schwarz)
+
+2005-06-20  Matthias Clasen  <mclasen@redhat.com>
+
 	* configure.in: Bump version number.
 
 	* === Released 2.7.0 ===
