--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-21  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/gdk-sections.txt: Add gdk_window_move_region
+
 2005-06-20  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.7.0 ===
