--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-22  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk-pixbuf-i18n.h: Define ngettext() in the non-NLS
+	case.  (#308717, Peter S. Mazinger)
+
 2005-06-15  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.6.8 ===
