--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-06-23  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkbutton.c (gtk_button_construct_child): Don't
+	trigger warnings if there are extra references to the
+	hbox.  (#308677, Dan Winship)
+
 	* gtk/gtkfilesystemunix.c (bookmark_list_write): Use
 	g_file_set_contents().  (#308722, Morten Welinder)
 
